2005-03-15  Mark McLoughlin  <mark@skynet.ie>

	Add python bindings. Mostly complete, but still need
	to finish wraping:
	  - menu_tree_directory_make_path ()
	  - menu_tree_add_monitor ()
	  - menu_tree_remove_monitor ()

	* configure.in, acinclude.m4: add python checks, copied
	from dbus.
	
	* Makefile.am: build the python subdir.
	
	* python/Makefile.am: again copied from dbus.
	
	* python/gmenu.pyx: Pyrex wrapping of the API.

2005-03-15  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/menu-tree.h:
	(menu_tree_entry_get_parent): remove.

2005-03-14  Mark McLoughlin  <mark@skynet.ie>

	Implement support for <Layout> and <DefaultLayout>.
	
	Based on a patch from Frederic Crozat <fcrozat@mandrakesoft.com>
	in bug #164310.

	* libmenu/menu-tree.h: API changes:
	  - Add MenuTreeItem type as base class of other items
	  - Make MenuTreeEntry and MenuTreeDirectory its sub-classes
	  - Add MenuTreeSeparator, MenuTreeAlias and MenuTreeHeader
	  - menu_tree_entry_ref/unref() becomes menu_tree_item_ref/unref()
	  - ditto for menu_tree_directory_ref/unref()
	  - Instead of having menu_tree_directory_get_entries() and
	    menu_tree_directory_get_subdirs, we now have
	    menu_tree_directory_get_contents()
	  - menu_tree_directory/entry_get_parent() becomes
	    menu_tree_item_get_parent()
	  - Add menu_tree_header_get_directory (), menu_tree_alias_get_directory()
	    and menu_tree_alias_get_item ()
	
	* libmenu/menu-tree.c:
	(find_path): look up the path from the laid out contents.
	(menu_tree_item_compare): add compare function for sorting
	directories and entries as peers.
	(collect_layout_info): retain the contents of the last <Layout>
	node we come across for each <Menu>
	(process_layout): retain the attributes of the last <DefaultLayout>
	node we come across for each <Menu>.
	(process_only_unallocated): don't prune empty subdirs here.
	(merge_subdir), (merge_subdir_by_name),
	(merge_entry), (merge_entry_by_id), (merge_subdirs),